# THUCTC

./: .gitignore  BUILD  BasicTextClassifier.cpp  BigramWordSegment.cpp  BigramWordSegment.h  CMakeLists.txt  DocumentVector.cpp  LangUtils.cpp  LangUtils.h  Lexicon.cpp  LiblinearTextClassifier.cpp  README.md  main.cpp
